Make the ranking work

--- a/views/index.jade
+++ b/views/index.jade
@@ -171,6 +171,8 @@ html
     h1 The best Baseball team in 1994.
     | &#x9;
     p(style='color:#EF4A4E') Made in Notman&apos;s House, Montreal.
+  p
+    button#doit DO IT
   nav
     h4 Criteria #1
     form(action='action_page.php', oninput='x.value=parseInt(a.value)')
@@ -387,3 +389,5 @@ html
                                   br
                                   br
                                   br
+    script(src="//code.jquery.com/jquery-1.11.2.min.js")
+    script(src="/javascripts/update.js")
