--- a/views/index.jade
+++ b/views/index.jade
@@ -5,389 +5,330 @@ html
     background-color:#f3f3f3;
     color:#165B9E;
     text-align:center;
-    padding:5px;
+    padding:10px;
     border:3px solid black;
     }
     nav {
     line-height:20px;
-    background-color:black;
+    background-color:#424242;
     color:white;
-    width:200px;
-    float:left;
-    padding:5px;
-    margin:20px;
-    }
-    #montreal {background-color:lightgrey;
-    color:black;
-    width:400px;
-    height:100px;
+    width:600px;
     float:left;
     padding:10px;
-    margin:20px;
-    border: 1px solid darkgrey;
-    border-radius: 0px 0px 0px 0px
+    margin:15px;
     }
-    #atlanta {background-color:lightgrey;
-    color:black;
-    width:400px;
-    height:100px;
+    footer {
+    background-color:#f3f3f3;
+    color:#EF4A4E;
     text-align:center;
     padding:10px;
-    margin:0px;
-    border: 1px solid darkgrey;
-    border-radius: 2px 2px 0px 0px
-    }
-    #newyork {background-color:lightgrey;
-    color:black;
-    width:400px;
-    height:100px;
-    text-align:center;
-    padding:15px;
-    margin:20px;
-    border: 1px solid darkgrey;
-    border-radius: 2px 2px 0px 0px
-    }
-    #philadelphia {background-color:lightgrey;
-    color:black;
-    width:400px;
-    height:100px;
-    text-align:center;
-    padding:15px;
-    margin:20px;
-    border: 1px solid darkgrey;
-    border-radius: 2px 2px 0px 0px
-    }
-    #florida {background-color:lightgrey;
-    color:black;
-    width:400px;
-    height:100px;
-    text-align:center;
-    padding:15px;
-    margin:20px;
-    border: 1px solid darkgrey;
-    border-radius: 2px 2px 0px 0px
-    }
-    #cincinnati {background-color:lightgrey;
-    color:black;
-    width:400px;
-    height:100px;
-    text-align:center;
-    padding:15px;
-    margin:20px;
-    border: 1px solid darkgrey;
-    border-radius: 2px 2px 0px 0px
-    }
-    #houston {background-color:lightgrey;
-    color:black;
-    width:400px;
-    height:100px;
-    text-align:center;
-    padding:15px;
-    margin:20px;
-    border: 1px solid darkgrey;
-    border-radius: 2px 2px 0px 0px
-    }
-    #pittsburgh {background-color:lightgrey;
-    color:black;
-    width:400px;
-    height:100px;
-    text-align:center;
-    padding:15px;
-    margin:20px;
-    border: 1px solid darkgrey;
-    border-radius: 2px 2px 0px 0px
-    }
-    #stlouis {background-color:lightgrey;
-    color:black;
-    width:400px;
-    height:100px;
-    text-align:center;
-    padding:15px;
-    margin:20px;
-    border: 1px solid darkgrey;
-    border-radius: 2px 2px 0px 0px
-    }
-    #chicago {background-color:lightgrey;
-    color:black;
-    width:400px;
-    height:100px;
-    text-align:center;
-    padding:15px;
-    margin:20px;
-    border: 1px solid darkgrey;
-    border-radius: 2px 2px 0px 0px
-    }
-    #losangeles {background-color:lightgrey;
-    color:black;
-    width:400px;
-    height:100px;
-    text-align:center;
-    padding:15px;
-    margin:20px;
-    border: 1px solid darkgrey;
-    border-radius: 2px 2px 0px 0px
-    }
-    #sanfrancisco {background-color:lightgrey;
-    color:black;
-    width:400px;
-    height:100px;
-    text-align:center;
-    padding:15px;
-    margin:20px;
-    border: 1px solid darkgrey;
-    border-radius: 2px 2px 0px 0px
-    }
-    #colorado {background-color:lightgrey;
-    color:black;
-    width:400px;
-    height:100px;
-    text-align:center;
-    padding:15px;
-    margin:20px;
-    border: 1px solid darkgrey;
-    border-radius: 2px 2px 0px 0px
-    }
-    #sandiego {background-color:lightgrey;
-    color:black;
-    width:400px;
-    height:100px;
-    text-align:center;
-    padding:15px;
-    margin:20px;
-    border: 1px solid darkgrey;
-    border-radius: 2px 2px 0px 0px
-    }
-    #texas {background-color:lightgrey;
-    color:black;
-    width:300px;
-    height:100px;
-    text-align:center;
-    padding:15px;
-    margin:20px;
-    border: 1px solid darkgrey;
-    border-radius: 0px 0px 0px 0px
+    border:2px solid black;
+    clear:both;
     }
   header
-    h1 The best Baseball team in 1994.
+    h1
+      img(src='/images/mlb.gif', alt='MLB', style='float:left;width:84px;height:42px')
+      | &#x9;Who was the best 1994 team?
     | &#x9;
-    p(style='color:#EF4A4E') Made in Notman&apos;s House, Montreal.
-  p
-    button#doit DO IT
+    p(style='color:#EF4A4E')
+      b
+        | &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Created for Baseball Hack Day - Notman House, Montreal
   nav
-    h4 Criteria #1
-    form(action='action_page.php', oninput='x.value=parseInt(a.value)')
-      | 0
-      input#a(type='range', name='a', value='50%')
-      output(type='number', name='x', for='a') 100%
-      br
-      br
-    h4 Criteria #2
-    form(action='action_page.php', oninput='x.value=parseInt(a.value)')
-      | 0
-      input#a(type='range', name='a', value='50%')
-      output(type='number', name='x', for='a') 100%
-      br
-      br
-    h4 Criteria #3
-    form(action='action_page.php', oninput='x.value=parseInt(a.value)')
-      | 0
-      input#a(type='range', name='a', value='50%')
-      output(type='number', name='x', for='a') 100%
-      br
-      br
-    h4 Criteria #4
-    form(action='action_page.php', oninput='x.value=parseInt(a.value)')
-      | 0
-      input#a(type='range', name='a', value='50%')
-      output(type='number', name='x', for='a') 100%
-      br
-      br
-    h4 Criteria #5
-    form(action='action_page.php', oninput='x.value=parseInt(a.value)')
-      | 0
-      input#a(type='range', name='a', value='50%')
-      output(type='number', name='x', for='a') 100%
-      br
-      br
-  | &#x9;
-  | &#x9;
-  | &#x9;
-  #montreal
-    .list-group
-      a.list-group-item.active(href='#')
-        h4.list-group-item-heading Montreal Expos
-        |     
-        p.list-group-item-text Last year of Montreal&apos;s baseball team
-    | &#x9;
+    h2
+      i Choose the importance of each advanced stat:
     br
+    h3 Run Differential
+    form
+      input(type='radio', name='Importance', value='High')
+      | &nbsp;&nbsp;Hell Yeah!&nbsp;&nbsp;
+      input(type='radio', name='Importance', value='Medium')
+      | &nbsp;&nbsp;Kinda Sorta&nbsp;&nbsp;
+      input(type='radio', name='Importance', value='Low')
+      | &nbsp;&nbsp;Meh&nbsp;&nbsp;
+      input(type='radio', name='Importance', value='Ignore', checked='')
+      | &nbsp;&nbsp;Fuhhggedaboutit!&nbsp;&nbsp; 
+      br
+      hr
+      br
+    h3 ERA
+    form
+      input(type='radio', name='Importance', value='High')
+      | &nbsp;&nbsp;Hell Yeah!&nbsp;&nbsp;
+      input(type='radio', name='Importance', value='Medium')
+      | &nbsp;&nbsp;Kinda Sorta&nbsp;&nbsp;
+      input(type='radio', name='Importance', value='Low')
+      | &nbsp;&nbsp;Meh&nbsp;&nbsp;
+      input(type='radio', name='Importance', value='Ignore', checked='')
+      | &nbsp;&nbsp;Fuhhggedaboutit!&nbsp;&nbsp; 
+      br
+      hr
+      br
+    h3 OPS
+    form
+      input(type='radio', name='Importance', value='High')
+      | &nbsp;&nbsp;Hell Yeah!&nbsp;&nbsp;
+      input(type='radio', name='Importance', value='Medium')
+      | &nbsp;&nbsp;Kinda Sorta&nbsp;&nbsp;
+      input(type='radio', name='Importance', value='Low')
+      | &nbsp;&nbsp;Meh&nbsp;&nbsp;
+      input(type='radio', name='Importance', value='Ignore', checked='')
+      | &nbsp;&nbsp;Fuhhggedaboutit!&nbsp;&nbsp; 
+      br
+      hr
+      br
+    h3 Speed Score (SPD)
+    form
+      input(type='radio', name='Importance', value='High')
+      | &nbsp;&nbsp;Hell Yeah!&nbsp;&nbsp;
+      input(type='radio', name='Importance', value='Medium')
+      | &nbsp;&nbsp;Kinda Sorta&nbsp;&nbsp;
+      input(type='radio', name='Importance', value='Low')
+      | &nbsp;&nbsp;Meh&nbsp;&nbsp;
+      input(type='radio', name='Importance', value='Ignore', checked='')
+      | &nbsp;&nbsp;Fuhhggedaboutit!&nbsp;&nbsp; 
+      br
+      hr
+      br
+    h3 Strikeouts to Walks (K-BB%)
+    form
+      input(type='radio', name='Importance', value='High')
+      | &nbsp;&nbsp;Hell Yeah!&nbsp;&nbsp;
+      input(type='radio', name='Importance', value='Medium')
+      | &nbsp;&nbsp;Kinda Sorta&nbsp;&nbsp;
+      input(type='radio', name='Importance', value='Low')
+      | &nbsp;&nbsp;Meh&nbsp;&nbsp;
+      input(type='radio', name='Importance', value='Ignore', checked='')
+      | &nbsp;&nbsp;Fuhhggedaboutit!&nbsp;&nbsp; 
+      br
+      hr
+      br
+    h3 WHIP
+    form
+      input(type='radio', name='Importance', value='High')
+      | &nbsp;&nbsp;Hell Yeah!&nbsp;&nbsp;
+      input(type='radio', name='Importance', value='Medium')
+      | &nbsp;&nbsp;Kinda Sorta&nbsp;&nbsp;
+      input(type='radio', name='Importance', value='Low')
+      | &nbsp;&nbsp;Meh&nbsp;&nbsp;
+      input(type='radio', name='Importance', value='Ignore', checked='')
+      | &nbsp;&nbsp;Fuhhggedaboutit!&nbsp;&nbsp; 
+      br
+      hr
+      br
+    h3 RA9-WAR
+    form
+      input(type='radio', name='Importance', value='High')
+      | &nbsp;&nbsp;Hell Yeah!&nbsp;&nbsp;
+      input(type='radio', name='Importance', value='Medium')
+      | &nbsp;&nbsp;Kinda Sorta&nbsp;&nbsp;
+      input(type='radio', name='Importance', value='Low')
+      | &nbsp;&nbsp;Meh&nbsp;&nbsp;
+      input(type='radio', name='Importance', value='Ignore', checked='')
+      | &nbsp;&nbsp;Fuhhggedaboutit!&nbsp;&nbsp; 
+      br
+      hr
+      br
+  section
+    style.
+      table {
+      width:20%;
+      float:right;
+      }
+      table, th, td {
+      border: 1px solid black;
+      border-collapse: collapse;
+      }
+      th, td {
+      padding: 7px;
+      margin: 30px;
+      text-align: left;
+      }
+      table#t01 tr:nth-child(even) {
+      background-color: #eee;
+      font-size: 16px;
+      }
+      table#t01 tr:nth-child(odd) {
+      background-color:#fff;
+      }
+      table#t01 th	{
+      background-color: black;
+      color: white;
+      font-size: 18px;
+      }
     br
-    br
-    | &#x9;
-    | &#x9;
-    | &#x9;
-    #atlanta
-      .list-group
-        a.list-group-item.active(href='#')
-          h4.list-group-item-heading Atlanta Braves
-          |     
-          p.list-group-item-text Braves
-      | &#x9;
-      br
-      br
-      br
-      | &#x9;&#x9;
-      | &#x9;
-      #newyork
-        .list-group
-          a.list-group-item.active(href='#')
-            h4.list-group-item-heading New York Mets
-            |     
-            p.list-group-item-text
-        br
-        br
-        br
-        | &#x9;&#x9;
-        | &#x9;
-        #philadelphia
-          .list-group
-            a.list-group-item.active(href='#')
-              h4.list-group-item-heading Philadelphia phillies
-              |     
-              p.list-group-item-text
-          br
-          br
-          br
+    table.sortable
+      table#t01
+        tr
+          th Team Name
           | &#x9;&#x9;
+          |     
+          th Score
+        |   
+        tr
+          td Expos
+          | &#x9;&#x9;
+          |     
+          td xx
+        |   
+        tr
+          td Yankees
+          | &#x9;&#x9;
+          |     
+          td xx
+        |   
+        tr
+          td Orioles
+          |     
+          td xx
+        |   
+        tr
+          td Blue Jays
+          | &#x9;&#x9;
+          |     
+          td xx
+        |   
+        tr
+          td Red Sox
           | &#x9;
-          #florida
-            .list-group
-              a.list-group-item.active(href='#')
-                h4.list-group-item-heading Florida Marlins
-                |     
-                p.list-group-item-text
-            br
-            br
-            br
-            | &#x9;&#x9;
-            | &#x9;
-            #cincinnati
-              .list-group
-                a.list-group-item.active(href='#')
-                  h4.list-group-item-heading Cincinnati Reds
-                  |     
-                  p.list-group-item-text
-              br
-              br
-              br
-              | &#x9;
-              | &#x9;
-              #houston
-                .list-group
-                  a.list-group-item.active(href='#')
-                    h4.list-group-item-heading Houston Astros
-                    |     
-                    p.list-group-item-text
-                br
-                br
-                br
-                | &#x9;
-                | &#x9;
-                #pittsburgh
-                  .list-group
-                    a.list-group-item.active(href='#')
-                      h4.list-group-item-heading Pittsburgh Pirates
-                      |     
-                      p.list-group-item-text
-                  br
-                  br
-                  br
-                  | &#x9;&#x9;
-                  | &#x9;
-                  #stlouis
-                    .list-group
-                      a.list-group-item.active(href='#')
-                        h4.list-group-item-heading St-Louis Cardinals
-                        |     
-                        p.list-group-item-text
-                    br
-                    br
-                    br
-                    | &#x9;&#x9;
-                    | &#x9;
-                    #chicago
-                      .list-group
-                        a.list-group-item.active(href='#')
-                          h4.list-group-item-heading Chicago Cubs
-                          |     
-                          p.list-group-item-text
-                      br
-                      br
-                      br
-                      | &#x9;
-                      | &#x9;
-                      #losangeles
-                        .list-group
-                          a.list-group-item.active(href='#')
-                            h4.list-group-item-heading LA Dodgers
-                            |     
-                            p.list-group-item-text
-                        br
-                        br
-                        br
-                        | &#x9;&#x9;
-                        | &#x9;
-                        #sanfrancisco
-                          .list-group
-                            a.list-group-item.active(href='#')
-                              h4.list-group-item-heading San Francisco Giants
-                              |     
-                              p.list-group-item-text
-                          br
-                          br
-                          br
-                          | &#x9;&#x9;
-                          | &#x9;
-                          #colorado
-                            .list-group
-                              a.list-group-item.active(href='#')
-                                h4.list-group-item-heading Colorado Rockies
-                                |     
-                                p.list-group-item-text
-                            br
-                            br
-                            br
-                            | &#x9;&#x9;
-                            | &#x9;
-                            #sandiego
-                              .list-group
-                                a.list-group-item.active(href='#')
-                                  h4.list-group-item-heading San Diego Padres
-                                  |     
-                                  p.list-group-item-text
-                              br
-                              br
-                              br
-                              | &#x9;&#x9;
-                              | &#x9;
-                              #texas
-                                .list-group
-                                  a.list-group-item.active(href='#')
-                                    h4.list-group-item-heading Texas Rangers
-                                    |     
-                                    p.list-group-item-text
-                                br
-                                br
-                                br
-                                | &#x9;&#x9;
-                                | &#x9;
-                                #oakland
-                                  .list-group
-                                    a.list-group-item.active(href='#')
-                                      h4.list-group-item-heading Oakland Athletics
-                                      |     
-                                      p.list-group-item-text
-                                  br
-                                  br
-                                  br
-    script(src="//code.jquery.com/jquery-1.11.2.min.js")
-    script(src="/javascripts/update.js")
+          |     
+          td xx
+        |   
+        tr
+          td Tigers
+          | &#x9;&#x9;
+          |     
+          td xx
+        |   
+        tr
+          td White Sox
+          | &#x9;&#x9;
+          |     
+          td xx
+        |   
+        tr
+          td Indians
+          | &#x9;
+          |     
+          td xx
+        |   
+        tr
+          td Royals
+          | &#x9;
+          |     
+          td xx
+        |   
+        tr
+          td Twins
+          | &#x9;
+          |     
+          td xx
+        |   
+        tr
+          td Brewers
+          | &#x9;&#x9;
+          |     
+          td xx
+        |   
+        tr
+          td Rangers
+          | &#x9;
+          |     
+          td xx
+        |   
+        tr
+          td Athletics
+          |     
+          td xx
+        |   
+        tr
+          td Mariners
+          | &#x9;&#x9;
+          |     
+          td xx
+        |   
+        tr
+          td Angels
+          | &#x9;&#x9;
+          |     
+          td xx
+        |   
+        tr
+          td Braves
+          | &#x9;&#x9;
+          |     
+          td xx
+        |   
+        tr
+          td Mets
+          | &#x9;&#x9;
+          |     
+          td xx
+        |   
+        tr
+          td Phillies
+          | &#x9;&#x9;
+          |     
+          td xx
+        |   
+        tr
+          td Marlins
+          | &#x9;&#x9;
+          |     
+          td xx
+        |   
+        tr
+          td Reds
+          | &#x9;
+          |     
+          td xx
+        |   
+        tr
+          td Astros
+          | &#x9;&#x9;
+          |     
+          td xx
+        |   
+        tr
+          td Pirates
+          | &#x9;
+          |     
+          td xx
+        |   
+        tr
+          td Cardinals
+          |     
+          td xx
+        |   
+        tr
+          td Cubs
+          | &#x9;&#x9;
+          |     
+          td xx
+        |   
+        tr
+          td Dodgers
+          | &#x9;&#x9;
+          |     
+          td xx
+        |   
+        tr
+          td Giants
+          | &#x9;&#x9;
+          |     
+          td xx
+        |   
+        tr
+          td Rockies
+          | &#x9;
+          |     
+          td xx
+        |   
+        tr
+          td Padres
+          | &#x9;
+          |     
+          td xx
+  footer
+    h3 Copyright &copy; 2015 Expos Are The Best, Baseball Hack Day.
+  script(src="//code.jquery.com/jquery-1.11.2.min.js")
+  script(src="/javascripts/update.js")
